src/objects/Non_Compliant_Country__c.object
<CustomObject>
    <description>Represents a non-compliant ISO country</description>
    <fields>
        <fullName>Display_in_E_Com__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that represents if the non-compliant country need to be displayed in E-Commerce app</description>
        <label>Display in E-Com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <description>Related ISO Country</description>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipName>Product_Forbiddens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Related Product</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Non_Compliance_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non-Compliant Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Non-Compliant-{0000}</displayFormat>
        <label>Non-Compliant Country</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Compliant Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>